# rdkb-MeshAgent

./: CONTRIBUTING.md  Makefile.am  NOTICE  autogen.sh  configure.ac  genautotools.ini
config/: MeshAgent.cfg  MeshAgentDM.cfg  TR181-MeshAgent.xml
scripts/: active_host_filter.py  active_host_filter.sh
source/: Makefile.am
source/MeshAgentCore/: Makefile.am  meshagent.c
source/MeshAgentSsp/: Makefile.am  cosa_apis_util.c  cosa_apis_util.h  cosa_mesh_apis.c  cosa_meshagent_dml.c  cosa_meshagent_dml.h  cosa_meshagent_internal.c  cosa_meshagent_internal.h  cosa_webconfig_api.c  cosa_webconfig_api.h  helpers.c  helpers.h  mesh_client_table.c  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/clientTest/: Makefile.am  meshQTest.c
source/include/: mesh_client_table.h  meshagent.h  meshsync_msgs.h
systemd_units/: meshAgent.path  meshAgent.service  meshwifi.service
